Extensions: Pass current channel and feature session type to extension unpack utility process.

The extension unpack utility process service uses Extension::Create which
involves availability checks for extension features. However we don't currently
set the current channel and feature session type in the utility process. This CL
fixes the issue by passing the current channel and feature session type to the
extension unpack utility process.

BUG=734854

Review-Url: https://codereview.chromium.org/2952353002
Cr-Commit-Position: refs/heads/master@{#483282}