extensions/browser/sandboxed_unpacker.cc
@@ -32,6 +32,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "extensions/common/extension_unpacker.mojom.h"
 #include "extensions/common/extension_utility_types.h"
 #include "extensions/common/extensions_client.h"
+#include "extensions/common/features/feature_channel.h"
+#include "extensions/common/features/feature_session_type.h"
 #include "extensions/common/file_util.h"
 #include "extensions/common/manifest_constants.h"
 #include "extensions/common/manifest_handlers/icons_handler.h"
@@ -423,7 +425,8 @@ void SandboxedUnpacker::Unpack(const base::FilePath& directory) {
   DCHECK(directory.DirName() == temp_dir_.GetPath());
 
   utility_process_mojo_client_->service()->Unpack(
-      directory, extension_id_, location_, creation_flags_,
+      GetCurrentChannel(), GetCurrentFeatureSessionType(), directory,
+      extension_id_, location_, creation_flags_,
       base::Bind(&SandboxedUnpacker::UnpackDone, this));
 }
 
